--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.7",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "resend": "^4.1.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
